// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildStepsCode builds script steps 1`] = `
"// click \\"Learn React\\" link
await browser.click(selectors[0]);
// click \\"Learn React\\" link
await browser.click(selectors[1]);
// click \\"Docs\\" link
await browser.click(selectors[2], { page: 1 });
// click \\"Tutorial\\" link
await browser.click(selectors[3]);
// click \\"Blog\\" link
await browser.click(selectors[4]);
// click \\"Docs\\" link
await browser.click(selectors[5], { page: 2 });
// click \\"Tutorial\\" link
await browser.click(selectors[6]);
// click \\"Blog\\" link
await browser.click(selectors[7]);
"
`;

exports[`buildStepsCode builds test steps 1`] = `
"
it('can click \\"Learn React\\" link', async () => {
  await browser.click(selectors[0]);
});

it('can click \\"Learn React\\" link', async () => {
  await browser.click(selectors[1]);
});

it('can click \\"Docs\\" link', async () => {
  await browser.click(selectors[2], { page: 1 });
});

it('can click \\"Tutorial\\" link', async () => {
  await browser.click(selectors[3]);
});

it('can click \\"Blog\\" link', async () => {
  await browser.click(selectors[4]);
});

it('can click \\"Docs\\" link', async () => {
  await browser.click(selectors[5], { page: 2 });
});

it('can click \\"Tutorial\\" link', async () => {
  await browser.click(selectors[6]);
});

it('can click \\"Blog\\" link', async () => {
  await browser.click(selectors[7]);
});
"
`;

exports[`buildStepsCode works for multiple pages 1`] = `
"
it('can click \\"Docs\\" link', async () => {
  await browser.click(selectors[2], { page: 1 });
});

it('can click \\"Tutorial\\" link', async () => {
  await browser.click(selectors[3]);
});

it('can click \\"Blog\\" link', async () => {
  await browser.click(selectors[4]);
});

it('can click \\"Docs\\" link', async () => {
  await browser.click(selectors[5], { page: 2 });
});

it('can click \\"Tutorial\\" link', async () => {
  await browser.click(selectors[6]);
});

it('can click \\"Blog\\" link', async () => {
  await browser.click(selectors[7]);
});
"
`;
